...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddStoreDrink">


    <EditText
        android:id="@+id/editTextAddDrinkName"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/add_drink_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.20" />

    <EditText
        android:id="@+id/editTextAddDrinkIngredientOne"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/add_drink_ingredient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.30" />

    <EditText
        android:id="@+id/editTextAddDrinkIngredientTwo"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/add_drink_ingredient"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.50" />

    <EditText
        android:id="@+id/editTextAddDrinkPrice"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/add_drink_price"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.60" />

    <EditText
        android:id="@+id/editTextAddDrinkDiscount"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/add_drink_discounted_price"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.70"/>

    <Button
        android:id="@+id/button_confirm_drink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_drink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
